tdf#51022 SC import: fix lost print ranges

Added a condition at table import time, so it set print ranges
only if the loaded table is not an external table.

The current table is the last non external table loaded,
while the actually loaded table can be an other table
in case if it is an external table.
when the actually loaded print range was set to the current table,
then the current table got an other tables print range.

Co-authored-by: Tibor Nagy (NISZ)
Change-Id: Ifc44148875106dad791de61953f3b046b6f2b188